[gd_scene load_steps=6 format=3 uid="uid://cptevs6qmklst"]

[ext_resource type="Script" uid="uid://blda8fn7e5pkm" path="res://scripts/util/item/item.gd" id="1_7n1ax"]
[ext_resource type="Script" uid="uid://c3bt3r7pe56hp" path="res://scripts/util/interaction/interaction_area.gd" id="2_i52cm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cgn1b"]

[sub_resource type="ViewportTexture" id="ViewportTexture_hxve2"]
viewport_path = NodePath("InteractionText/InteractionTextSV")

[sub_resource type="SphereShape3D" id="SphereShape3D_hxve2"]
radius = 0.18620491

[node name="Item" type="RigidBody3D" groups=["Item"]]
collision_layer = 8
collision_mask = 6
gravity_scale = 3.0
lock_rotation = true
script = ExtResource("1_7n1ax")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16
script = ExtResource("2_i52cm")

[node name="InteractionAreaCol" type="CollisionShape3D" parent="InteractionArea"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_cgn1b")
debug_color = Color(0.5487614, 0.4254163, 0.9484524, 0.41960785)

[node name="InteractionText" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
billboard = 1
no_depth_test = true
texture = SubResource("ViewportTexture_hxve2")

[node name="InteractionTextSV" type="SubViewport" parent="InteractionText"]
unique_name_in_owner = true
transparent_bg = true
size = Vector2i(40, 23)

[node name="InteractionTextLabel" type="Label" parent="InteractionText/InteractionTextSV"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
text = "Item"

[node name="GroundCollider" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, -7.3901694e-09, -0.0022137463)
shape = SubResource("SphereShape3D_hxve2")
debug_color = Color(0.660649, 0.5147407, 1.92523e-07, 0.41960785)

[node name="PickupDelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[connection signal="collided" from="InteractionArea" to="." method="_on_interaction_area_collided"]
[connection signal="not_collided" from="InteractionArea" to="." method="_on_interaction_area_not_collided"]
